# 365datascience_downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/365datascience_course_downloader/: course_model.py  download_all_course.py  download_single_course.py  downloader_single_course.py  input.json  video_model.py
