[tool.poetry]
name = "365datascience-course-downloader"
version = "0.1.0"
description = "Simple course downloader for 365datascience.com"
authors = ["Roy, Debakar <debakar.roy@intel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = "^1.10.2"
yt-dlp = "^2022.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
